# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build-deb.fish  configuration.yaml  configuration.yml  migrate-production.fish  run-with-localhost.fish  sqlx-data.json
.github/workflows/: main.yml
migrations/: 20221016151602_create_subscriptions_table.sql  20221028231445_make_status_not_null_in_subscriptions.sql  20221028232408_create_subscription_tokens_table.sql  20221029205222_subscriptions_on_delete_cascade.sql  20221031194234_create_users_table.sql  20221105224502_create_sessions_table.sql  20221109220459_seed_user.sql  20221203213722_create_idempotency_table.sql  20221211155811_create_newsletter_issues_table.sql  20221211160518_fix_newsletter_issues_table.sql  20221211160903_create_issue_delivery_queue_table.sql
src/: authentication.rs  configuration.rs  domain.rs  idempotency.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs  telemetry.rs  tem.rs
src/authentication/: middleware.rs  mod.rs
src/routes/: admin_change_password.rs  admin_dashboard.rs  admin_logout.rs  admin_newsletters.rs  home.rs  login.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/sessions/: mod.rs  session_state.rs
static/: style.css
templates/: admin_change_password.html.j2  admin_dashboard.html.j2  admin_newsletters.html.j2  base.html.j2  home.html  home.html.j2  html_content.html  login.html  login.html.j2  text_content.txt
tests/: health_check.rs
tests/api/: admin_change_password.rs  admin_dashboard.rs  admin_newsletters.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
