[package]
name = "zero2prod"
description = "zero2prod"
authors = ["Vincent Rischmann"]
license = "Proprietary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
claim = "0.5"
fake = "~2.3"

config = "0.13"

uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"

actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }

unicode-segmentation = "1"
const-str = "0.5"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"

secrecy = { version = "0.8", features = ["serde"] }
validator = "0.14"
askama = "0.11"

rand = { version = "0.8", features = ["std_rng"] }

[dev-dependencies]
once_cell = "1"

quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

wiremock = "0.5"
serde_urlencoded = "0.7"
linkify = "0.8"
