[package]
name = "zero2prod"
description = "zero2prod"
authors = ["Vincent Rischmann"]
license = "Proprietary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
# Error stuff
thiserror = "1"
anyhow = "1"

# Testing stuff
claim = "0.5"
fake = "~2.3"

# Crypto
argon2 = { version = "0.4", features = ["std"] }

# Web server, web client and async runtime
actix-web = "4"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-files = "0.6.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }

# Web stuff
askama = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
hex = "0.4"

# SQL on steroids
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }

# String stuff
unicode-segmentation = "1"
const-str = "0.5"

# Tracing stuff
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"

# Other stuff
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"
base64 = "0.13"
rand = { version = "0.8", features = ["std_rng"] }
config = "0.13"
secrecy = { version = "0.8", features = ["serde"] }
validator = "0.14"

[dev-dependencies]
once_cell = "1"

quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

wiremock = "0.5"
linkify = "0.8"
